Use nginx proxy server instead

--- a/static/index.html
+++ b/static/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html ng-app="asterface">
   <head>
-    <script type="text/javascript" src="/static/js/lib/jquery-2.1.0.min.js"></script>
-    <script type="text/javascript" src="/static/js/lib/bootstrap.js"></script>
-    <script type="text/javascript" src="/static/js/lib/jquery.collapsible.js"></script>
-    <script type="text/javascript" src="/static/js/lib/asterix-sdk-stable.js"></script>
-    <script type="text/javascript" src="/static/js/lib/angular-1.2.16.js"></script>
-    <script type="text/javascript" src="/static/js/lib/angular-ui.js"></script>
-    <script type="text/javascript" src="/static/js/lib/ui-bootstrap-tpls-0.12.0.js"></script>
-    <script type="text/javascript" src="/static/js/lib/angular-route.js"></script>
-    <script type="text/javascript" src="/static/js/lib/angular-sanitize.js"></script>
+    <script type="text/javascript" src="/js/lib/jquery-2.1.0.min.js"></script>
+    <script type="text/javascript" src="/js/lib/bootstrap.js"></script>
+    <script type="text/javascript" src="/js/lib/jquery.collapsible.js"></script>
+    <script type="text/javascript" src="/js/lib/asterix-sdk-stable.js"></script>
+    <script type="text/javascript" src="/js/lib/angular-1.2.16.js"></script>
+    <script type="text/javascript" src="/js/lib/angular-ui.js"></script>
+    <script type="text/javascript" src="/js/lib/ui-bootstrap-tpls-0.12.0.js"></script>
+    <script type="text/javascript" src="/js/lib/angular-route.js"></script>
+    <script type="text/javascript" src="/js/lib/angular-sanitize.js"></script>
 
-    <script type="text/javascript" src="/static/js/lib/sprintf.js"></script>
-    <script type="text/javascript" src="/static/js/asterix.js"></script>
-    <script type="text/javascript" src="/static/js/directives.js"></script>
-    <script type="text/javascript" src="/static/js/base.js"></script>
-    <script type="text/javascript" src="/static/js/browser.js"></script>
-    <script type="text/javascript" src="/static/js/newDataset.js"></script>
-    <script type="text/javascript" src="/static/js/newDatatype.js"></script>
-    <script type="text/javascript" src="/static/js/newDataverse.js"></script>
-    <script type="text/javascript" src="/static/js/query.js"></script>
-    <script type="text/javascript" src="/static/js/viewRow.js"></script>
+    <script type="text/javascript" src="/js/lib/sprintf.js"></script>
+    <script type="text/javascript" src="/js/asterix.js"></script>
+    <script type="text/javascript" src="/js/directives.js"></script>
+    <script type="text/javascript" src="/js/base.js"></script>
+    <script type="text/javascript" src="/js/browser.js"></script>
+    <script type="text/javascript" src="/js/newDataset.js"></script>
+    <script type="text/javascript" src="/js/newDatatype.js"></script>
+    <script type="text/javascript" src="/js/newDataverse.js"></script>
+    <script type="text/javascript" src="/js/query.js"></script>
+    <script type="text/javascript" src="/js/viewRow.js"></script>
 
-    <link rel="stylesheet" href="/static/css/bootstrap.css">
-    <link rel="stylesheet" href="/static/css/angular-ui.css">
-    <link rel="stylesheet" href="/static/css/manager.css">
+    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="/css/angular-ui.css">
+    <link rel="stylesheet" href="/css/manager.css">
     <title>Asterix Manager</title>
   </head>
   <body ng-controller="BaseController">
