Set groundwork so that all types can be inserted.  However, afInput's getValue needs to incorporate custom controllers depending on the field type.

--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="asterface">
   <head>
+    <meta charset="UTF-8">
     <script type="text/javascript" src="/js/lib/jquery-2.1.0.min.js"></script>
     <script type="text/javascript" src="/js/lib/bootstrap.js"></script>
     <script type="text/javascript" src="/js/lib/jquery.collapsible.js"></script>
