Forms for complexer types working

--- a/static/index.html
+++ b/static/index.html
@@ -30,7 +30,7 @@
   </head>
   <body ng-controller="BaseController">
     <div class="header">
-      <h1>Asterix Console</h1>
+      <h1>Asterix Manager</h1>
     </div>
 
     <div class="browser-bar">
