Upgrade to angular 1.3, add support for nested datatypes

--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
     <script type="text/javascript" src="/js/lib/bootstrap.js"></script>
     <script type="text/javascript" src="/js/lib/jquery.collapsible.js"></script>
     <script type="text/javascript" src="/js/lib/asterix-sdk-stable.js"></script>
-    <script type="text/javascript" src="/js/lib/angular-1.2.16.js"></script>
+    <script type="text/javascript" src="/js/lib/angular-1.3.js"></script>
     <script type="text/javascript" src="/js/lib/angular-ui.js"></script>
     <script type="text/javascript" src="/js/lib/ui-bootstrap-tpls-0.12.0.js"></script>
     <script type="text/javascript" src="/js/lib/angular-route.js"></script>
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="/css/manager.css">
     <title>Asterix Manager</title>
   </head>
-  <body ng-controller="BaseController">
+  <body ng-controller="BaseController as baseController">
     <div class="header">
       <h1>Asterix Manager</h1>
     </div>
